# AgentSpine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release-sdk.yml
configs/: agentspine.yaml
dashboard/: Dockerfile  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/actions/: page.tsx
dashboard/app/approvals/: actions.ts  page.tsx
dashboard/app/policies/: actions.ts  page.tsx
dashboard/lib/: api.ts
docs/: api-reference.md  architecture.md  astro.config.mjs  deployment.md  plugins.md  quickstart.md
docs/plans/: 2026-05-02-agentspine-v1-implementation.md
docs/src/content/docs/: api.md  (+7 more)
docs/src/styles/: custom.css
examples/: custom_policy.py  external_executor.py  quickstart.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
sdk/: README.md  pyproject.toml
sdk/src/agentspine/: __init__.py  _version.py  client.py  config.py  exceptions.py  features.py  models.py
sdk/src/agentspine/db/: __init__.py  engine.py  queries.py  repository.py  tables.py
sdk/src/agentspine/dedupe/: fingerprint.py  hard.py  semantic.py
sdk/src/agentspine/events/: __init__.py  logger.py  stream.py
sdk/src/agentspine/judiciary/: __init__.py  human.py  judge.py  runner.py
sdk/src/agentspine/knowledge/: __init__.py  base.py  enricher.py  graph.py  pg_backend.py  query.py  updater.py
sdk/src/agentspine/learning/: __init__.py  analyzer.py  reward.py
sdk/src/agentspine/lock/: __init__.py  manager.py  pg_backend.py  redis_backend.py  watchdog.py
sdk/src/agentspine/notify/: __init__.py  router.py  webhook.py
sdk/src/agentspine/pipeline/: __init__.py  orchestrator.py  parallel.py  steps.py
sdk/src/agentspine/policy/: __init__.py  engine.py  loader.py  provider.py  rules.py
sdk/src/agentspine/ratelimit/: breaker.py  limiter.py
sdk/src/agentspine/risk/: __init__.py  scorer.py
sdk/src/agentspine/tools/: executor.py  registry.py  retry.py
sdk/src/agentspine/tools/connectors/: __init__.py  base.py  http.py  local.py  mcp.py
sdk/src/agentspine/vault/: __init__.py  env_backend.py  manager.py  pg_backend.py  provider.py
sdk/tests/: conftest.py
sdk/tests/unit/: test_config.py  test_policy_rules.py  test_risk.py
server/: Dockerfile  app.py  pyproject.toml
server/src/agentspine_server/: __init__.py  app.py  deps.py  metrics.py  serializers.py
server/src/agentspine_server/routes/: actions.py  approvals.py  events.py  health.py  policies.py  rewards.py  workflows.py
skills/agentspine-sdk/: SKILL.md
tests/: conftest.py
